--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/material": "^20.2.8",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@aspnet/signalr": "^1.1.4",
     "oidc-client": "^1.11.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
